# torchlogix

./: .buildinfo  .flake8  .gitignore  CITATION.cff  EXPORT_MODE.md  HDL_GENERATION_SUMMARY.md  INSTALLATION_SUPPORT.md  README.md  bit-representation-demo.ipynb  build.py  check-graph.py  circuit_ir.py  environment.yml  genindex.html  index.html  objects.inv  playground.ipynb  playground2.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.rst.txt
api/: circuit.html  functional.html  layers.html  models.html  torchlogix.html
difflogic/: __init__.py  compiled_model.py  difflogic.py  linear.py  packbitstensor.py
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: export_conv_to_verilog.py  export_pipelined_verilog.py  export_to_verilog.py  for-yaman.py  logic_model.onnx  mnist_example.ipynb  onnx_export_example.py  verify_with_verilator.py
experiments/: README.md  __init__.py  apply_compiled_net.py  campaigns.py  campaigns.yml  compile.py  env.sh  evaluate.py  hpo.slurm  hpo_dry.sh  hpo_worker.py  hyperparameter_opt.py  loading.py  main.py  main_legacy.py  make-paper-plots.py  mnist_dataset.py  mnist_example.ipynb  model_selection.py  plot_training.py  requirements.txt  run.sh  run.slurm  run_dry.sh  run_test.sh  run_training.sh  setup_optuna_db.sh  standard_worker.py  train.py  utils.py
guides/: concepts.html  contributing.html  hardware_deployment.html  installation.html  logic_gates.html  quickstart.html
misc/: INSTALLATION_SUPPORT.md  environment.yml
models/: base_linear.py  baseline_nn.py  conv.py  nn.py
synthesis/: compile_clgn_model.ipynb  compiled_model.py
tests/: conftest.py  test_alkaid_plugin.py  test_binarization.py  test_circuit.py  test_clgn.py  test_clgn_3d.py  test_connections.py  test_conv_model.py  test_dense_model.py  test_eval_mode.py  test_export_mode.py  test_gumbel.py  (+9 more)
(+201 files in other folders)
